<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/HeaderText"
                    android:text="@string/team_a" />

                <TextView
                    android:id="@+id/text_view_score_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/button_touchdown_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/StandardText"
                    android:onClick="addSixPointsTeamA"
                    android:text="@string/touchdown" />

                <Button
                    android:id="@+id/button_extra_point_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    style="@style/StandardText"
                    android:onClick="addExtraPointTeamA"
                    android:text="@string/extra_point" />

                <Button
                    android:id="@+id/button_conversion_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    style="@style/StandardText"
                    android:onClick="addTwoPointsTeamA"
                    android:text="@string/conversion" />

                <Button
                    android:id="@+id/button_field_goal_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    style="@style/StandardText"
                    android:onClick="addThreePointsTeamA"
                    android:text="@string/field_goal" />

                <Button
                    android:id="@+id/button_safety_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    style="@style/StandardText"
                    android:onClick="addTwoPointsTeamA"
                    android:text="@string/safety" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    style="@style/HeaderText"
                    android:text="@string/team_b" />

                <TextView
                    android:id="@+id/text_view_score_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/button_touchdown_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/StandardText"
                    android:onClick="addSixPointsTeamB"
                    android:text="@string/touchdown" />

                <Button
                    android:id="@+id/button_extra_point_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    style="@style/StandardText"
                    android:onClick="addExtraPointTeamB"
                    android:text="@string/extra_point" />

                <Button
                    android:id="@+id/button_conversion_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    style="@style/StandardText"
                    android:onClick="addTwoPointsTeamB"
                    android:text="@string/conversion" />

                <Button
                    android:id="@+id/button_field_goal_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    style="@style/StandardText"
                    android:onClick="addThreePointsTeamB"
                    android:text="@string/field_goal" />

                <Button
                    android:id="@+id/button_safety_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    style="@style/StandardText"
                    android:onClick="addTwoPointsTeamB"
                    android:text="@string/safety" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/StandardText"
            android:onClick="resetScore"
            android:layout_gravity="center"
            android:text="@string/reset" />

    </LinearLayout>

</ScrollView>